# cwheel

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  cwheel.cc  cwheel.cpp  cwheel.h  vcpkg.json  xmake.lua
.github/workflows/: test-coverage.yaml
src/: CMakeLists.txt  cwheel.mpp  delegate.h  delegate.mpp  function.hpp  function.mpp  hello.cc  hello.mpp  iterator.hpp  ranges.hpp  ranges.mpp  sequence.hpp  thread_pool.cc  thread_pool.h  thread_pool.mpp  typelist.hpp  xmake.lua
test/: CMakeLists.txt  test_delegate.cc  test_function.cc  test_hello.cc  test_ranges.cc  test_sequence.cc  test_thread_pool.cc  xmake.lua
